some image deletion and clean up

--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -105,10 +105,10 @@
                         <a href="#" class="requestfullscreen nav-link btn-icon"><i class="material-icons md-cast"></i></a>
                     </li>
                     <li>
-                        <a class="btn btn-small btn-outline-danger" href="/admin/logout"><i class="material-icons md-exit_to_app"></i>Logout</a>
+                        <a class="btn btn-small btn-danger" href="/admin/logout"><i class="material-icons md-exit_to_app"></i>Logout</a>
                     </li>
                     <li class="nav-item ml-15">
-                         <img class="img-xs rounded-circle" src="/admin-assets/imgs/people/avatar2.jpg" alt="User"></a>
+                         <img class="img-xs rounded-circle" src="/admin-assets/imgs/icons/avatar.jpg" alt="Admin">
                     </li>
                 </ul>
             </div>
