splitted userDashboard and made seperate pages for profile,address,orders

--- a/views/user/EditAddress.ejs
+++ b/views/user/EditAddress.ejs
@@ -1,6 +1,6 @@
 <%- include('../layout/header') %>
     <main class="main">
-        <div class="page-header breadcrumb-wrap">
+        <!-- <div class="page-header breadcrumb-wrap">
             <div class="container">
                 <div class="breadcrumb">
                     <a href="index.html" rel="nofollow">Home</a>
@@ -8,13 +8,13 @@
                     <span></span> Account
                 </div>
             </div>
-        </div>
-        <section class="pt-150 pb-150">
+        </div> -->
+        <section class="pt-20 pb-150">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 m-auto">
                         <div class="row">
-                          <h3>Add Address</h3>
+                          <h3>Edit Address</h3>
                             <div class="card">
                               <div class="card-header">
                                   <h5>Address</h5>
