--- a/views/user/addaddress.ejs
+++ b/views/user/addaddress.ejs
@@ -1,6 +1,6 @@
 <%- include('../layout/header') %>
     <main class="main">
-        <div class="page-header breadcrumb-wrap">
+        <!-- <div class="page-header breadcrumb-wrap">
             <div class="container">
                 <div class="breadcrumb">
                     <a href="index.html" rel="nofollow">Home</a>
@@ -8,8 +8,8 @@
                     <span></span> Account
                 </div>
             </div>
-        </div>
-        <section class="pt-150 pb-150">
+        </div> -->
+        <section class="pt-20 pb-150">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 m-auto">
