modified the routes into the new profile pages

--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -69,8 +69,14 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class=" text-left mb-25 ">
-                            <a href="/addAddress/?checkout=true"><button type="button" class="btn btn-primary">Add Address</button></a>
-                            <a href="/myaccount/?checkout=true"><button type="button" class="btn btn-secondary">Manage Address</button></a>
+                            <a href="/addAddress/?checkout=true" class="btn btn-primary">
+                                <i class="fas fa-plus"></i> Add Address
+                            </a>
+                            
+                            <a href="/useraddresses/?checkout=true" class="btn btn-secondary">
+                                <i class="fas fa-cogs"></i> Manage Address
+                            </a>
+                            
                         </div>
                         <div class="mb-25">
                             <h4>Billing Details</h4>
