--- a/views/user/useraccount.ejs
+++ b/views/user/useraccount.ejs
@@ -1,46 +1,50 @@
 <%- include('../layout/header') %>
 
-  <div class="card">
-      <div class="card-header">
-          <h5>Account Details</h5>
-      </div>
-      <div class="card-body">
-          <% if(typeof user != undefined){ %>
-          <form method="post" action="/editProfile/?id=<%=user._id %>" id="editProfileForm"
-              >
-              <div class="row">
-                  <div class="form-group col-md-12">
-                      <label>Username <span class="required">*</span></label>
-                      <input required="true" class="form-control square"  id="username" name="name" type="text" value="<%= user.name %>" oninput="validateUsername()">
-                      <span id="errorusername" class="text-danger"></span>
-                  </div>
-                  <div class="form-group col-md-12">
-                      <label>Mobile Number <span class="required">*</span></label>
-                      <input required="true" class="form-control square" name="mobile" id="mobile" type="number" value="<%= user.mobile %>" oninput="validateMobile()">
-                      <span id="errormobile" class="text-danger"></span>
-                  </div>
-                  <div class="form-group col-md-12">
-                      <label>Email Address <span class="required">*</span></label>
-                      <input required="true" class="form-control square" name="email" id="email" type="email" value="<%= user.email %>" oninput="validateEmail()">
-                      <span id="erroremail" class="text-danger"></span>
-                  </div>
-                  <div class="col-md-12">
-                      <button type="submit" class="btn btn-fill-out submit" name="submit" value="Submit">Save</button>
-                  </div>
-              </div>
-          </form>
-      <% if(typeof message != "undefined"){ %>
-          <div class="text-center text-danger"><%= message %></div>
-      <% } %>
-      <div class="referral-code-container">
-          <p class="referral-code-label">Your Referral Code:</p>
-          <p class="referral-code"><%=user.referralCode%></p>
-      </div>
-      <% }else{  %>
-          <h4>account not found</h4>
-          <% }  %>
-      </div>
-  </div>
+<main class="container mt-4 mb-20">
+    <div class="card">
+        <div class="card-header">
+            <h5>Account Details</h5>
+        </div>
+        <div class="card-body">
+            <% if(typeof user != undefined){ %>
+            <form method="post" action="/editProfile/?id=<%=user._id %>" id="editProfileForm">
+                <div class="row">
+                    <div class="form-group col-md-12">
+                        <label>Username <span class="required">*</span></label>
+                        <input required="true" class="form-control square" id="username" name="name" type="text"
+                            value="<%= user.name %>" oninput="validateUsername()">
+                        <span id="errorusername" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-md-12">
+                        <label>Mobile Number <span class="required">*</span></label>
+                        <input required="true" class="form-control square" name="mobile" id="mobile" type="number"
+                            value="<%= user.mobile %>" oninput="validateMobile()">
+                        <span id="errormobile" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-md-12">
+                        <label>Email Address <span class="required">*</span></label>
+                        <input required="true" class="form-control square" name="email" id="email" type="email"
+                            value="<%= user.email %>" oninput="validateEmail()">
+                        <span id="erroremail" class="text-danger"></span>
+                    </div>
+                    <div class="col-md-12">
+                        <button type="submit" class="btn btn-fill-out submit" name="submit" value="Submit">Save</button>
+                    </div>
+                </div>
+            </form>
+            <% if(typeof message != "undefined"){ %>
+            <div class="text-center text-danger"><%= message %></div>
+            <% } %>
+            <div class="referral-code-container">
+                <p class="referral-code-label">Your Referral Code:</p>
+                <p class="referral-code"><%=user.referralCode%></p>
+            </div>
+            <% }else{  %>
+            <h4>account not found</h4>
+            <% }  %>
+        </div>
+    </div>
+</main>  
 
 
 
