--- a/views/user/EditAddress.ejs
+++ b/views/user/EditAddress.ejs
@@ -17,37 +17,37 @@
                                       <div class="row">
                                           <div class="form-group col-md-12">
                                               <label>AddressName <span class="required">*</span></label>
-                                              <input required="" class="form-control square" name="addressname" id="addressName" type="text" value="<%= address.addressname %>">
+                                              <input required class="form-control square" name="addressname" id="addressName" type="text" value="<%= address.addressname %>">
                                               <span id="errorAddressName" class="text-danger"></span>
                                           </div>
                                           <div class="form-group col-md-12">
                                               <label>name <span class="required">*</span></label>
-                                              <input required="" class="form-control square" name="name" type="text" id="name"  value="<%= address.name %>">
+                                              <input required class="form-control square" name="name" type="text" id="name"  value="<%= address.name %>">
                                               <span class="text-danger" id="errorName"></span>
                                           </div>
                                           <div class="form-group col-md-12">
                                               <label>country <span class="required">*</span></label>
-                                              <input required="" class="form-control square" name="country" type="text" id="country" value="<%= address.country %>">
+                                              <input required class="form-control square" name="country" type="text" id="country" value="<%= address.country %>">
                                               <span class="text-danger" id="errorCountry"></span>
                                           </div>
                                           <div class="form-group col-md-12">
                                               <label>streetaddress<span class="required">*</span></label>
-                                              <input required="" class="form-control square" name="streetaddress" type="text" id="streetAddress" value="<%= address.streetaddress %>">
+                                              <input required class="form-control square" name="streetaddress" type="text" id="streetAddress" value="<%= address.streetaddress %>">
                                               <span class="text-danger" id="errorStreetAddress"></span>
                                           </div>
                                           <div class="form-group col-md-12">
                                               <label>city <span class="required">*</span></label>
-                                              <input required="" class="form-control square" name="city" type="text" id="city" value="<%= address.city %>">
+                                              <input required class="form-control square" name="city" type="text" id="city" value="<%= address.city %>">
                                               <span class="text-danger" id="errorCity"></span>
                                           </div>
                                           <div class="form-group col-md-12">
                                               <label>state <span class="required">*</span></label>
-                                              <input required="" class="form-control square" name="state" type="text" id="state"  value="<%= address.state %>">
+                                              <input required class="form-control square" name="state" type="text" id="state"  value="<%= address.state %>">
                                               <span class="text-danger" id="errorState"></span>
                                           </div>
                                           <div class="form-group col-md-12">
                                               <label>Pincode<span class="required">*</span></label>
-                                              <input required="" class="form-control square" name="pincode" type="number" id="pincode" value="<%= address.pincode %>">
+                                              <input required class="form-control square" name="pincode" type="number" id="pincode" value="<%= address.pincode %>">
                                               <span class="text-danger" id="errorPincode"></span>
                                           </div>
                                           <div class="form-group col-md-12">
@@ -57,7 +57,7 @@
                                           </div>
                                           <div class="form-group col-md-12">
                                               <label>Alter Number<span class="required">*</span></label>
-                                              <input required="" class="form-control square" name="alterphone" type="number" id="alterNumber"  value="<%= address.alterphone %>">
+                                              <input required class="form-control square" name="alterphone" type="number" id="alterNumber"  value="<%= address.alterphone %>">
                                               <span class="text-danger" id="errorAlterNumber"></span>
                                           </div>
 
@@ -147,7 +147,7 @@
                 }
                 const mobileNumber = document.getElementById('mobileNumber').value.trim();
                 const mobileRegex = /^[0-9]{10}$/;
-                if(mobileNumber === "" || !mobileRegex.test(mobile)){
+                if(mobileNumber === "" || !mobileRegex.test(mobileNumber)){
                     document.getElementById('errorMobileNumber').innerHTML =  'Enter a valid 10-digit mobile number';
                     event.preventDefault();
                 }else{
